--- a/index.html
+++ b/index.html
@@ -26,8 +26,40 @@
         </h1>
         <h4 class="main__desc">Cтадионы, газопроводы, мосты, дамбы</h4>
     </div>
+</header>
+<section class="about">
+    <div class="info">
+        <div class="container">
+            <div class="about__grid">
+                <div class="about__grid-item">
+                    <h4 class="about__h4">26</h4>
+                    <h5 class="about__h5">Лет</h5>
+                    <p class="about__p">на рынке</p>
+                </div>
+                <div class="about__grid-item">
+                    <h4 class="about__h4">26</h4>
+                    <h5 class="about__h5">Лет</h5>
+                    <p class="about__p">на рынке</p>
+                </div>
+                <div class="about__grid-item">
+                    <h4 class="about__h4">26</h4>
+                    <h5 class="about__h5">Лет</h5>
+                    <p class="about__p">на рынке</p>
+                </div>
+                <div class="about__grid-item">
+                    <h4 class="about__h4">26</h4>
+                    <h5 class="about__h5">Лет</h5>
+                    <p class="about__p">на рынке</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
 
-    <body>
-    </body>
+    </div>
+</section>
+
+<body>
+</body>
 
 </html>
