--- a/index.html
+++ b/index.html
@@ -55,8 +55,43 @@
         </div>
     </div>
     <div class="container">
+        <h2 class="text-h2 project-h2">Наши самые большие проекты</h2>
+        <div class="about__grid-2">
+            <div class="about__grid-item2">
+                <img src="/img/ARena.png" alt="" class="projecr-img">
+                <div class="rectangle"></div>
+                <h3 class="text-h3 project-h3">Газпром Арена</h3>
+                <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
+                    точкой
+                    для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
+            </div>
+            <div class="about__grid-item2">
+                <img src="/img/ARena.png" alt="" class="projecr-img">
+                <div class="rectangle"></div>
+                <h3 class="text-h3 project-h3">Газпром Арена</h3>
+                <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
+                    точкой
+                    для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
+            </div>
+            <div class="about__grid-item2">
+                <img src="/img/ARena.png" alt="" class="projecr-img">
+                <div class="rectangle"></div>
+                <h3 class="text-h3 project-h3">Газпром Арена</h3>
+                <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
+                    точкой
+                    для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
+            </div>
+            <div class="about__grid-item2">
+                <img src="/img/ARena.png" alt="" class="projecr-img">
+                <div class="rectangle"></div>
+                <h3 class="text-h3 project-h3">Газпром Арена</h3>
+                <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
+                    точкой
+                    для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
+            </div>
 
-    </div>
+
+        </div>
 </section>
 
 <body>
