--- a/index.html
+++ b/index.html
@@ -81,17 +81,54 @@
                     точкой
                     для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
             </div>
-            <div class="about__grid-item2">
-                <img src="/img/ARena.png" alt="" class="projecr-img">
-                <div class="rectangle"></div>
-                <h3 class="text-h3 project-h3">Газпром Арена</h3>
-                <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
-                    точкой
-                    для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
+</section>
+<section class="request">
+    <div class="container">
+        <div class="request__flex">
+            <div class="request__flex-left">
+                <h4 class="request__h4">Самые умные проекты</h4>
+                <h5 class="request__h5">Реализуем самые смелые решения в россии!</h5>
             </div>
-
-
+            <div class="request__flex-right">
+                <button class="request__btn">
+                    <img src="img/request.svg" alt="" class="request__icon">
+                    Ваш запрос
+                </button>
+            </div>
         </div>
+    </div>
+</section>
+<section class="servieces">
+    <div class="container">
+        <h2 class="text-h2 section__h2">Чем мы занимаемся?</h2>
+        <div class="services__grid">
+            <div class="services__grid-item">
+                <img src="img/serv-icon.svg" alt="serv-icon" class="services__icon">
+                <h4 class="services__h4">Строительство офисных зданий</h4>
+            </div>
+            <div class="services__grid-item">
+                <img src="img/serv-icon.svg" alt="serv-icon" class="services__icon">
+                <h4 class="services__h4">Строительство офисных зданий</h4>
+            </div>
+            <div class="services__grid-item">
+                <img src="img/serv-icon.svg" alt="serv-icon" class="services__icon">
+                <h4 class="services__h4">Строительство офисных зданий</h4>
+            </div>
+            <div class="services__grid-item">
+                <img src="img/serv-icon.svg" alt="serv-icon" class="services__icon">
+                <h4 class="services__h4">Строительство офисных зданий</h4>
+            </div>
+            <div class="services__grid-item">
+                <img src="img/serv-icon.svg" alt="serv-icon" class="services__icon">
+                <h4 class="services__h4">Строительство офисных зданий</h4>
+            </div>
+            <div class="services__grid-item">
+                <img src="img/serv-icon.svg" alt="serv-icon" class="services__icon">
+                <h4 class="services__h4">Строительство офисных зданий</h4>
+            </div>
+        </div>
+        
+    </div>
 </section>
 
 <body>
