--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2 class="text-h2 project-h2">Наши самые большие проекты</h2>
         <div class="about__grid-2">
             <div class="about__grid-item2">
-                <img src="/img/ARena.png" alt="" class="projecr-img">
+                <img src="img/ARena.png" alt="" class="projecr-img">
                 <div class="rectangle"></div>
                 <h3 class="text-h3 project-h3">Газпром Арена</h3>
                 <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
@@ -66,7 +66,7 @@
                     для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
             </div>
             <div class="about__grid-item2">
-                <img src="/img/ARena.png" alt="" class="projecr-img">
+                <img src="img/ARena.png" alt="" class="projecr-img">
                 <div class="rectangle"></div>
                 <h3 class="text-h3 project-h3">Газпром Арена</h3>
                 <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
@@ -74,7 +74,7 @@
                     для разивтия на следующие десятилетия. Мы очень рады данному еву.</p>
             </div>
             <div class="about__grid-item2">
-                <img src="/img/ARena.png" alt="" class="projecr-img">
+                <img src="img/ARena.png" alt="" class="projecr-img">
                 <div class="rectangle"></div>
                 <h3 class="text-h3 project-h3">Газпром Арена</h3>
                 <p class="project-p">Мы сделали самую красивую арену в Европе. Это открытие стало для нас прорывной
@@ -130,7 +130,57 @@
         
     </div>
 </section>
-
+<section class="portfolio">
+    <div class="portfolio__grid">
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+        <div class="portfolio_grid-item">
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+        </div>
+    </div>
+</section>
+<section class="question">
+    <div class="container">
+        <h2 class="text-h2 section__h2">Ответы на вопросы</h2>
+        <div class="question_items">
+            <div class="question_item">
+                <h3 class="text-h3 question_3 close">Работаете ли вы по 249 ФЗ?</h3>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+            </div>
+            <div class="question_item">
+                <h3 class="text-h3 question_3 open">Работаете ли вы по 249 ФЗ?</h3>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+            </div>
+            <div class="question_item">
+                <h3 class="text-h3 question_3 close">Работаете ли вы по 249 ФЗ?</h3>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+            </div>
+            <div class="question_item">
+                <h3 class="text-h3 question_3 close">Работаете ли вы по 249 ФЗ?</h3>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+            </div>
+        </div>
+    </div>
+</section>
 <body>
 </body>
 
