--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="media.css">
     <title>Figma_site</title>
 </head>
 <header class="header">
@@ -127,34 +128,34 @@
                 <h4 class="services__h4">Строительство офисных зданий</h4>
             </div>
         </div>
-        
+
     </div>
 </section>
 <section class="portfolio">
     <div class="portfolio__grid">
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
         <div class="portfolio_grid-item">
-            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="" >
+            <img class="potfolio-img" src="img/porfolio-item.jpg" alt="">
         </div>
     </div>
 </section>
@@ -164,23 +165,151 @@
         <div class="question_items">
             <div class="question_item">
                 <h3 class="text-h3 question_3 close">Работаете ли вы по 249 ФЗ?</h3>
-                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                    Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                    безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для
+                    распечатки образцов. </p>
             </div>
             <div class="question_item">
                 <h3 class="text-h3 question_3 open">Работаете ли вы по 249 ФЗ?</h3>
-                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                    Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                    безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для
+                    распечатки образцов. </p>
             </div>
             <div class="question_item">
                 <h3 class="text-h3 question_3 close">Работаете ли вы по 249 ФЗ?</h3>
-                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                    Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                    безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для
+                    распечатки образцов. </p>
             </div>
             <div class="question_item">
                 <h3 class="text-h3 question_3 close">Работаете ли вы по 249 ФЗ?</h3>
-                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </p>
+                <p class="text-p question_p">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                    Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                    безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для
+                    распечатки образцов. </p>
             </div>
         </div>
     </div>
 </section>
+<section class="partners">
+    <div class="container">
+        <div class="text-h2 partners__h2">Наши партнеры</div>
+        <div class="partners__flex">
+            <div class="partners__item">
+                <img src="img/image_partners.png" alt="">
+            </div>
+            <div class="partners__item">
+                <img src="img/image_partners.png" alt="">
+            </div>
+            <div class="partners__item">
+                <img src="img/image_partners.png" alt="">
+            </div>
+            <div class="partners__item">
+                <img src="img/image_partners.png" alt="">
+            </div>
+            <div class="partners__item">
+                <img src="img/image_partners.png" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="reviews">
+    <div class="container">
+        <h2 class="text-h2 reviews__h2">
+            Отзывы о работе с нами
+        </h2>
+        <div class="reviews__grid">
+            <div class="reviews__grid-item">
+                <div class="reviews__card">
+                    <div class="reviews__quotes">“</div>
+                    <p class="text-p text-p-reviews">Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                        вэб-дизайне.
+                        Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время
+                        некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</p>
+                </div>
+                <h4 class="text-h4">Иванов Иван <span class="reviews__author-accent">ООО “Газпром-Арена”</span></h4>
+            </div>
+            <div class="reviews__grid-item">
+                <div class="reviews__card">
+                    <div class="reviews__quotes">“</div>
+                    <p class="text-p text-p-reviews">Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                        вэб-дизайне.
+                        Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время
+                        некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</p>
+                </div>
+                <h4 class="text-h4">Иванов Иван <span class="reviews__author-accent">ООО “Газпром-Арена”</span></h4>
+            </div>
+            <div class="reviews__grid-item">
+                <div class="reviews__card">
+                    <div class="reviews__quotes">“</div>
+                    <p class="text-p text-p-reviews">Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+                        вэб-дизайне.
+                        Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время
+                        некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</p>
+                </div>
+                <h4 class="text-h4">Иванов Иван <span class="reviews__author-accent"> ООО “Газпром-Арена”</span></h4>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="request">
+    <div class="container">
+        <div class="request__flex">
+            <div class="request__flex-left">
+                <h4 class="request__h4">ХОТИТЕ С НАМИ РАБОТАТЬ?</h4>
+                <h5 class="request__h5">ОСТАВЬТЕ ЗАЯВКУ И МЫ СВЯЖЕМСЯ С ВАМИ!</h5>
+            </div>
+            <div class="request__flex-right">
+                <button class="request__btn">
+                    <img src="img/request.svg" alt="" class="request__icon">
+                    Ваш запрос
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contacts">
+    <div class="container">
+        <h2 class="text-h2 contacts__h2">Контакты</h2>
+        <div class="contacts__grid">
+            <div class="contacts__grid-item">
+                <img class="contacts__icon" src="img/map-icon.svg" alt="">
+                <h3 class="text-h3 contacts__h3 contacts__h3-gray">Адрес</h3>
+                <h3 class="text-h3 contacts__h3">Невский проспект 140, <br>офис 140-142</h3>
+            </div>
+            <div class="contacts__grid-item">
+                <img class="contacts__icon" src="img/phone-icon.svg" alt="">
+                <h3 class="text-h3 contacts__h3 contacts__h3-gray">Телефон</h3>
+                <h3 class="text-h3 contacts__h3">8 (812) 111-22-33
+                    <br>8 (812) 111-22-33 </h3>
+            </div>
+            <div class="contacts__grid-item">
+                <img class="contacts__icon" src="img/clock-icon.svg" alt="">
+                <h3 class="text-h3 contacts__h3 contacts__h3-gray">Время работы</h3>
+                <h3 class="text-h3 contacts__h3">Пн-Сб <br>10:00 - 20:00</h3>
+            </div>
+            <div class="contacts__grid-item">
+                <img class="contacts__icon" src="img/mail-icon.svg" alt="">
+                <h3 class="text-h3 contacts__h3 contacts__h3-gray">E-mail</h3>
+                <h3 class="text-h3 email-accept">INFO@VIP.RU</h3>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+</section>
+<div class="footer">
+    <div class="container">
+        <div class="footer__flex">
+            <p class="text-p footer__copyright">&copy;2019 Строительная компания</p>
+            <p class="text-p footer__brand">Разработано лучшей студией</p>
+        </div>
+    </div>
+</div>
+
 <body>
 </body>
 
